<resources>
    <string name="app_name">Find My Friends</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register account</string>
    <string name="register_button">Register</string>
    <string name="no_account">No account? <u>Register here</u>!</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_camera">Camera</string>
    <string name="have_account">Already have an account? <u>Go to login</u>!</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="title_activity_settings">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_show_user">Show/hide yourself on map</string>
    <string name="action_hide_user">Hide yourself on map</string>
    <string name="action_friends">Friends list</string>
    <string name="action_to_camera">Switch to camera view</string>
    <string name="action_to_map">Switch to map view</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="gender">Gender</string>
    <string name="avatar">Avatar</string>
    <string name="change_avatar">Change avatar</string>
    <string name="change_email">Change email</string>
    <string name="user_avatar">User avatar</string>
    <string name="new_avatar_camera">New avatar using camera</string>
    <string name="new_avatar_internal">New avatar from gallery</string>
    <string name="friends_list">Friends list</string>
    <string name="invite">Invite</string>
    <string name="pending">Pending</string>
    <string name="invite_person">Invite person</string>
</resources>
