<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:stretchColumns="0"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusableInTouchMode="true"
        tools:context="pg.eti.biedrzycki.findmyfriends.Home">

        <TableRow android:layout_width="match_parent">
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="100dp" />
        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:gravity="center_horizontal">
            <EditText
                android:id="@+id/field_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow android:layout_width="match_parent">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginTop="10dp" />
        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:gravity="center_horizontal">
            <EditText
                android:id="@+id/field_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp">
            <Button
                android:id="@+id/action_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:onClick="loginAction"
                android:text="@string/login"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />
        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/action_no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goToRegister"
                android:text="@string/no_account"
                android:textColor="#3b3f7b"
                android:gravity="center_horizontal"
                android:layout_marginTop="40dp" />
        </TableRow>
    </TableLayout>
</ScrollView>
